[gd_scene load_steps=4 format=3 uid="uid://dlwog074e4w1h"]

[ext_resource type="Script" uid="uid://bvk4femy1m5e0" path="res://Scripts/UI/Shop/shopui.gd" id="1_e3f3e"]
[ext_resource type="PackedScene" uid="uid://d1tt7e66b1oyv" path="res://Scenes/UI/Shop/shopping_slot.tscn" id="2_2l5lg"]
[ext_resource type="Texture2D" uid="uid://cavse8ld5bby8" path="res://Textures/Crafting/crafting_slot_selected.png" id="3_cs7mq"]

[node name="Shop" type="Control"]
z_index = 1
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_e3f3e")

[node name="ItemsToBuy" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 124.0
offset_right = 1010.0
offset_bottom = 519.0
theme_override_constants/separation = 78

[node name="ShopSlot1" parent="ItemsToBuy" instance=ExtResource("2_2l5lg")]
layout_mode = 2

[node name="ShopSlot2" parent="ItemsToBuy" instance=ExtResource("2_2l5lg")]
layout_mode = 2

[node name="ShopSlot3" parent="ItemsToBuy" instance=ExtResource("2_2l5lg")]
layout_mode = 2

[node name="ShopSlot4" parent="ItemsToBuy" instance=ExtResource("2_2l5lg")]
layout_mode = 2

[node name="ShopSlot5" parent="ItemsToBuy" instance=ExtResource("2_2l5lg")]
layout_mode = 2

[node name="ItemsToSell" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 146.0
offset_top = 124.0
offset_right = 1010.0
offset_bottom = 519.0
theme_override_constants/separation = 78

[node name="ShopSlot1" parent="ItemsToSell" instance=ExtResource("2_2l5lg")]
layout_mode = 2
is_selling = true

[node name="ShopSlot2" parent="ItemsToSell" instance=ExtResource("2_2l5lg")]
layout_mode = 2
is_selling = true

[node name="ShopSlot3" parent="ItemsToSell" instance=ExtResource("2_2l5lg")]
layout_mode = 2
is_selling = true

[node name="ShopSlot4" parent="ItemsToSell" instance=ExtResource("2_2l5lg")]
layout_mode = 2
is_selling = true

[node name="ShopSlot5" parent="ItemsToSell" instance=ExtResource("2_2l5lg")]
layout_mode = 2
is_selling = true

[node name="BuyButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 143.0
offset_top = 62.0
offset_right = 568.0
offset_bottom = 117.0

[node name="Buy" type="TextureRect" parent="BuyButton"]
layout_mode = 0
offset_left = -11.0
offset_top = -6.0
offset_right = 65.0
offset_bottom = 22.0
scale = Vector2(5.89474, 2.40909)
texture = ExtResource("3_cs7mq")

[node name="SellButton" type="TextureButton" parent="."]
modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 0
offset_left = 580.0
offset_top = 62.0
offset_right = 1008.0
offset_bottom = 117.0

[node name="Sell" type="TextureRect" parent="SellButton"]
layout_mode = 0
offset_left = -12.0
offset_top = -6.0
offset_right = 64.0
offset_bottom = 22.0
scale = Vector2(5.94737, 2.40909)
texture = ExtResource("3_cs7mq")

[node name="ActButton" type="TextureButton" parent="."]
modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
disabled = true

[node name="Act" type="TextureRect" parent="ActButton"]
layout_mode = 0
offset_left = 132.0
offset_top = 514.0
offset_right = 209.0
offset_bottom = 537.0
scale = Vector2(5.89474, 2.40909)
texture = ExtResource("3_cs7mq")

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Exit" type="TextureRect" parent="ExitButton"]
layout_mode = 0
offset_left = 572.0
offset_top = 514.0
offset_right = 648.0
offset_bottom = 537.0
scale = Vector2(5.89474, 2.40909)
texture = ExtResource("3_cs7mq")

[node name="Border1" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 132.0
offset_top = 123.0
offset_right = 146.0
offset_bottom = 515.0
color = Color(1, 0.760784, 0.054902, 1)

[node name="Border2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1006.0
offset_top = 123.0
offset_right = 1020.0
offset_bottom = 515.0
color = Color(1, 0.760784, 0.054902, 1)

[node name="Border3" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 132.0
offset_top = 117.0
offset_right = 1020.0
offset_bottom = 124.0
color = Color(1, 0.760784, 0.054902, 1)

[node name="Border4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 56.0
offset_right = 580.0
offset_bottom = 124.0
color = Color(1, 0.760784, 0.054902, 1)

[node name="Border5" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 132.0
offset_top = 512.0
offset_right = 1020.0
offset_bottom = 519.0
color = Color(1, 0.760784, 0.054902, 1)

[node name="BuyText" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 132.0
offset_top = 56.0
offset_right = 1974.0
offset_bottom = 335.0
scale = Vector2(0.24, 0.24)
theme_override_font_sizes/font_size = 156
text = "BUY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SellText" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 574.0
offset_top = 56.0
offset_right = 2416.0
offset_bottom = 335.0
scale = Vector2(0.24, 0.24)
theme_override_font_sizes/font_size = 156
text = "SELL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitText" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 576.0
offset_top = 508.0
offset_right = 2418.0
offset_bottom = 787.0
scale = Vector2(0.24, 0.24)
theme_override_font_sizes/font_size = 156
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActText" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 137.0
offset_top = 508.0
offset_right = 1979.0
offset_bottom = 787.0
scale = Vector2(0.24, 0.24)
theme_override_font_sizes/font_size = 156
text = "CONFIRM"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="ActButton" to="." method="_on_act_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
